Added repo link.

--- a/slides/index.html
+++ b/slides/index.html
@@ -19,6 +19,10 @@
 		<div class="reveal">
 			<div class="slides">
 				<section id="what_is_rust">
+					<section>
+						<h2>Before we get started...</h2>
+						<p>Everything is here: <a href="https://github.com/jfcarr/rust-tech-talk">https://github.com/jfcarr/rust-tech-talk</a></p>
+					</section>
 					<section data-auto-animate>
 						<h3>What Is Rust?</h3>
 						<img src="img/rustacean.png" />
