Updated reference and documentation links.

--- a/slides/index.html
+++ b/slides/index.html
@@ -260,6 +260,10 @@
 								<td><a href="https://doc.rust-lang.org/reference/">https://doc.rust-lang.org/reference/</a></td>
 							</tr>
 							<tr>
+								<td>Rust Cookbook</td>
+								<td><a href="https://rust-lang-nursery.github.io/rust-cookbook/">https://rust-lang-nursery.github.io/rust-cookbook/</a></td>
+							</tr>
+							<tr>
 								<td>Rust Design Patterns</td>
 								<td><a href="https://rust-unofficial.github.io/patterns/">https://rust-unofficial.github.io/patterns/</a></td>
 							</tr>
