--- a/www/slides/index.html
+++ b/www/slides/index.html
@@ -21,7 +21,7 @@
 				<section id="what_is_rust">
 					<section>
 						<h2>Before we get started...</h2>
-						<p>Everything is here: <a href="https://github.com/jfcarr/rust-tech-talk">https://github.com/jfcarr/rust-tech-talk</a></p>
+						<p>Everything is here:<br> <a href="https://github.com/jfcarr/rust-tech-talk">https://github.com/jfcarr/rust-tech-talk</a></p>
 					</section>
 					<section data-auto-animate>
 						<h3>What Is Rust?</h3>
@@ -92,7 +92,7 @@
 						<h2>Cargo</h2>
 					</section>
 					<section>
-						<h2>Crate Registry</h2>
+						<h2>Crates Registry</h2>
 					</section>
 				</section>
 				<section id="editor_ide_support">
