Page header correction

--- a/www/book/content/declarations_and_data_types/declarations_and_data_types.html
+++ b/www/book/content/declarations_and_data_types/declarations_and_data_types.html
@@ -142,7 +142,7 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="declarations-and-data-types"><a class="header" href="#declarations-and-data-types">Declarations and Data Types</a></h1>
+                        <h1 id="data-and-object-types"><a class="header" href="#data-and-object-types">Data and Object Types</a></h1>
 
                     </main>
 
