--- a/www/book/print.html
+++ b/www/book/print.html
@@ -208,7 +208,7 @@
 <pre><code class="language-toml">[dependencies]
 rand = &quot;0.8.5&quot;
 </code></pre>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="declarations-and-data-types"><a class="header" href="#declarations-and-data-types">Declarations and Data Types</a></h1>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="data-and-object-types"><a class="header" href="#data-and-object-types">Data and Object Types</a></h1>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="declarations"><a class="header" href="#declarations">Declarations</a></h1>
 <h2 id="statically-typed"><a class="header" href="#statically-typed">Statically Typed</a></h2>
 <p>Rust is statically typed.  Variables must be declared.  If a type is not specified, Rust will try to infer it.</p>
