--- a/www/index.html
+++ b/www/index.html
@@ -7,13 +7,15 @@
 	</head>
 
 	<body>
-		<div class="w3-container w3-teal">
-			<h1>Supporting Material for Rust Tech Talk</h1>
-		</div>
+		<div class="w3-row-padding">
+			<div class="w3-container w3-teal">
+				<h1>Supporting Material for Rust Tech Talk</h1>
+			</div>
 
-		<div class="w3-container">
-			<p><a href="slides/index.html">Slide Deck</a></p>
-			<p><a href="book/index.html">Rust Language Examples documentation</a></p>
+			<div class="w3-container">
+				<p><a href="slides/index.html">Slide Deck</a></p>
+				<p><a href="book/index.html">Rust Language Examples documentation</a></p>
+			</div>
 		</div>
 	</body>
 
