--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 
 	<head>
 		<title>Supporting Material for Rust Tech Talk</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="w3.css">
 	</head>
 
@@ -14,6 +15,7 @@
 
 			<div class="w3-container">
 				<p><a href="slides/index.html">Slide Deck</a></p>
+
 				<p><a href="book/index.html">Rust Language Examples documentation</a></p>
 			</div>
 		</div>
