--- a/www/index.html
+++ b/www/index.html
@@ -1,24 +1,38 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
 
 	<head>
-		<title>Supporting Material for Rust Tech Talk</title>
+		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="w3.css">
+		<title>Supporting Material for Rust Tech Talk</title>
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 	</head>
 
 	<body>
-		<div class="w3-row-padding">
-			<div class="w3-container w3-teal">
-				<h1>Supporting Material for Rust Tech Talk</h1>
-			</div>
+		<div class="container">
+			<h2>Supporting Material for Rust Tech Talk</h2>
 
-			<div class="w3-container">
-				<p><a href="slides/index.html">Slide Deck</a></p>
-
-				<p><a href="book/index.html">Rust Language Examples documentation</a></p>
-			</div>
+			<table class="table">
+				<thead>
+					<tr>
+						<th>Name</th>
+						<th>Description</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td><a href="slides/index.html">Slide Deck</a></td>
+						<td>Basic outline of the presentation</td>
+					</tr>
+					<tr>
+						<td><a href="book/index.html">Rust Language Examples</a></td>
+						<td>Detailed documentation and code snippets</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
+
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
 	</body>
 
 </html>
