--- a/www/book/content/ownership/ownership.html
+++ b/www/book/content/ownership/ownership.html
@@ -143,6 +143,11 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="ownership"><a class="header" href="#ownership">Ownership</a></h1>
+<p>Ownership refers to the rules that govern how a Rust program manages memory.  These rules are checked at compile time, and if any of the rules are being violated, then the program won't compile.  This provides two benefits:</p>
+<ol>
+<li>The programmer isn't required to explicitly allocate and free memory, and</li>
+<li>No garbage collector is needed at run time.</li>
+</ol>
 <p>Learn more: <a href="https://doc.rust-lang.org/stable/book/ch04-00-understanding-ownership.html">https://doc.rust-lang.org/stable/book/ch04-00-understanding-ownership.html</a></p>
 
                     </main>
