Improved "Ownership and Moves" examples.

--- a/www/book/content/ownership/ownership_and_moves.html
+++ b/www/book/content/ownership/ownership_and_moves.html
@@ -144,47 +144,49 @@
                     <main>
                         <h1 id="ownership-and-moves"><a class="header" href="#ownership-and-moves">Ownership and Moves</a></h1>
 <p>Resources can have only one owner.  When ownership is transferred to a new owner, the previous owner can no longer be used.</p>
+<h2 id="simple-stack-allocated-types"><a class="header" href="#simple-stack-allocated-types">Simple stack-allocated types</a></h2>
+<pre><pre class="playground"><code class="language-rust editable">fn main() {
+	// 'x' is a stack allocated integer.
+	let x = 5u32;
+
+	// Assignment of a simple type like 'x' implements a copy, so the data is
+	// copied to 'y' and no resources are moved.
+	let y = x;
+
+	// Both values can be independently used
+	println!(&quot;x is {}, and y is {}&quot;, x, y);
+}
+</code></pre></pre>
+<h2 id="complex-heap-allocated-types"><a class="header" href="#complex-heap-allocated-types">Complex heap-allocated types</a></h2>
+<pre><pre class="playground"><code class="language-rust editable">fn main() {
+	// 'a' is a pointer to a heap allocated integer
+	let a = Box::new(5i32);
+
+	println!(&quot;a contains: {}&quot;, a);
+
+	// 'b' takes ownership
+	let b = a;
+
+	println!(&quot;b contains: {}&quot;, b);
+
+	// println!(&quot;a contains {}&quot;, a);  // What happens if you uncomment this line?
+}
+</code></pre></pre>
 <pre><pre class="playground"><code class="language-rust editable">// This function takes ownership of the heap allocated memory
 fn destroy_box(c: Box&lt;i32&gt;) {
-    println!(&quot;Destroying a box that contains {}&quot;, c);
+	println!(&quot;Destroying a box that contains {}&quot;, c);
 
-    // `c` is destroyed and the memory freed
+	// 'c' is destroyed and the memory freed
 }
 
 fn main() {
-    // _Stack_ allocated integer
-    let x = 5u32;
+	let a = Box::new(5i32);
 
-    // *Copy* `x` into `y` - no resources are moved
-    let y = x;
+	println!(&quot;a contains: {}&quot;, a);
 
-    // Both values can be independently used
-    println!(&quot;x is {}, and y is {}&quot;, x, y);
+	destroy_box(a);
 
-    // `a` is a pointer to a _heap_ allocated integer
-    let a = Box::new(5i32);
-
-    println!(&quot;a contains: {}&quot;, a);
-
-    // *Move* `a` into `b`
-    let b = a;
-    // The pointer address of `a` is copied (not the data) into `b`.
-    // Both are now pointers to the same heap allocated data, but
-    // `b` now owns it.
-    
-    // Error! `a` can no longer access the data, because it no longer owns the
-    // heap memory
-    //println!(&quot;a contains: {}&quot;, a);
-    // TODO ^ Try uncommenting this line
-
-    // This function takes ownership of the heap allocated memory from `b`
-    destroy_box(b);
-
-    // Since the heap memory has been freed at this point, this action would
-    // result in dereferencing freed memory, but it's forbidden by the compiler
-    // Error! Same reason as the previous Error
-    //println!(&quot;b contains: {}&quot;, b);
-    // TODO ^ Try uncommenting this line
+	// println!(&quot;a contains: {}&quot;, a);  // What happens if you uncomment this line?
 }
 </code></pre></pre>
 <p>Details here: <a href="https://doc.rust-lang.org/stable/rust-by-example/scope/move.html">https://doc.rust-lang.org/stable/rust-by-example/scope/move.html</a></p>
