Improved Borrowing example.

--- a/www/book/content/ownership/borrowing.html
+++ b/www/book/content/ownership/borrowing.html
@@ -143,43 +143,51 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="borrowing"><a class="header" href="#borrowing">Borrowing</a></h1>
-<p>To access data without taking ownership of it, <strong>borrowing</strong> can be used.  For this, objects are passed by reference instead of value.</p>
-<pre><pre class="playground"><code class="language-rust editable">// This function takes ownership of a box and destroys it
-fn eat_box_i32(boxed_i32: Box&lt;i32&gt;) {
-    println!(&quot;Destroying box that contains {}&quot;, boxed_i32);
+<p>To access data without taking ownership of it, <strong>borrowing</strong> can be used.</p>
+<p>Passing by reference indicates that we want to borrow:</p>
+<pre><pre class="playground"><code class="language-rust editable">// This function borrows an i32
+fn borrow_i32(borrowed_i32: &amp;i32) {
+	println!(&quot;This int is: {}&quot;, borrowed_i32);
 }
 
-// This function borrows an i32
-fn borrow_i32(borrowed_i32: &amp;i32) {
-    println!(&quot;This int is: {}&quot;, borrowed_i32);
+fn main() {
+	// Create a boxed i32, and a stacked i32
+	let boxed_i32 = Box::new(5_i32);
+	let stacked_i32 = 6_i32;
+
+	// Borrow the contents of the box. Ownership is not taken,
+	// so the contents can be borrowed again.
+	println!(&quot;Start value: {}&quot;, boxed_i32);
+	borrow_i32(&amp;boxed_i32);
+	println!(&quot;Return value: {}&quot;, boxed_i32);
+
+	// Same result with a stacked i32.
+	println!(&quot;Start value: {}&quot;, stacked_i32);
+	borrow_i32(&amp;stacked_i32);
+	println!(&quot;Return value: {}&quot;, stacked_i32);
+}
+</code></pre></pre>
+<p>You can't destroy an object while it's borrowed:</p>
+<pre><pre class="playground"><code class="language-rust editable">// This function takes ownership of a box and destroys it
+fn destroy_box_i32(boxed_i32: Box&lt;i32&gt;) {
+    println!(&quot;Destroying box that contains {}&quot;, boxed_i32);
 }
 
 fn main() {
     // Create a boxed i32, and a stacked i32
     let boxed_i32 = Box::new(5_i32);
-    let stacked_i32 = 6_i32;
 
-    // Borrow the contents of the box. Ownership is not taken,
-    // so the contents can be borrowed again.
-    borrow_i32(&amp;boxed_i32);
-    borrow_i32(&amp;stacked_i32);
-
-    {
+	{
         // Take a reference to the data contained inside the box
         let _ref_to_i32: &amp;i32 = &amp;boxed_i32;
 
-        // Error!
-        // Can't destroy `boxed_i32` while the inner value is borrowed later in scope.
-        eat_box_i32(boxed_i32);
-        // FIXME ^ Comment out this line
-
-        // Attempt to borrow `_ref_to_i32` after inner value is destroyed
-        borrow_i32(_ref_to_i32);
-        // `_ref_to_i32` goes out of scope and is no longer borrowed.
+        // Can't destroy `boxed_i32` here.  Why?
+        // destroy_box_i32(boxed_i32);
+        // ^ What happens if you uncomment this line?
     }
 
     // `boxed_i32` can now give up ownership to `eat_box` and be destroyed
-    eat_box_i32(boxed_i32);
+    destroy_box_i32(boxed_i32);
 }
 </code></pre></pre>
 <p>Details here: <a href="https://doc.rust-lang.org/stable/rust-by-example/scope/borrow.html">https://doc.rust-lang.org/stable/rust-by-example/scope/borrow.html</a></p>
