Added note about 3rd-party error handling crates.

--- a/www/slides/index.html
+++ b/www/slides/index.html
@@ -180,6 +180,7 @@
 							<li>panic! (unrecoverable conditions)</li>
 							<li>Option</li>
 							<li>Result</li>
+							<li>3rd-party solutions (e.g., anyhow, thiserror, error-stack)</li>
 						</ul>
 					</section>
 					<section>
