--- a/www/book/content/unsafe_code.html
+++ b/www/book/content/unsafe_code.html
@@ -143,12 +143,14 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="unsafe-code"><a class="header" href="#unsafe-code">Unsafe Code</a></h1>
-<p>The default behavior of Rust is to provide as many safety checks-and-balances as possible, to protect you from unsafe code.  But, sometimes it's necessary to bypass these protections, for things like:</p>
-<ul>
-<li>dereferencing raw pointers</li>
-<li>calling functions over FFI</li>
-<li>accessing hardware addresses directly, for IOT/embedded programming</li>
-</ul>
+<p>The default behavior of Rust is to provide as many safety checks-and-balances as possible, to protect you from unsafe code.  For example, if you try to derefence a raw pointer, the Rust compiler disallows it:</p>
+<pre><pre class="playground"><code class="language-rust editable">fn main() {
+    let raw_p: *const u32 = &amp;10;
+
+	assert!(*raw_p == 10);
+}
+</code></pre></pre>
+<p>But, sometimes it's necessary to bypass these protections, not only for raw pointers, but also for operations like calling functions over FFI, and accessing hardware addresses directly (for IoT/embedded programming).</p>
 <p>To write unsafe code, you simply wrap the code in an <code>unsafe</code> block, like this:</p>
 <pre><pre class="playground"><code class="language-rust editable">fn main() {
     let raw_p: *const u32 = &amp;10;
@@ -158,7 +160,12 @@
     }
 }
 </code></pre></pre>
-<p>Learn more:  <a href="https://doc.rust-lang.org/stable/rust-by-example/unsafe.html">https://doc.rust-lang.org/stable/rust-by-example/unsafe.html</a></p>
+<p>An unsafe wrapper informs the Rust compiler that you know what you're doing, and to turn off its safety checks.</p>
+<p>Learn more:</p>
+<ul>
+<li><a href="https://doc.rust-lang.org/stable/rust-by-example/unsafe.html">https://doc.rust-lang.org/stable/rust-by-example/unsafe.html</a></li>
+<li><a href="https://doc.rust-lang.org/stable/book/ch19-01-unsafe-rust.html">https://doc.rust-lang.org/stable/book/ch19-01-unsafe-rust.html</a></li>
+</ul>
 
                     </main>
 
